# alexandru-dan-croitoriu-portofolio

./: .gitignore  AUTO_INCREMENT_ORDER_USAGE.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  instructions-PersonalGalery.md  wt_config.xml  wt_config_debug.xml  wt_config_release.xml
.github/: copilot-instructions.md
dbo/: portofolio.db  stylus-dev.db  stylus-prod.db  stylus.db
dockerfiles/: builder-alpine  full_dockerfile  run-builder-build
src/: main.cpp
src/000_Server/: Server.cpp
src/001_App/: App.cpp  App.h
src/002_Components/: MonacoEditor.cpp  MonacoEditor.h
src/002_Components/topics/: MonacoTopic.cpp  MonacoTopic.h  WtComponentsGalery.cpp  WtComponentsGalery.h
src/003_Navigation/: DeferredWidget.h  Navigation.cpp  Navigation.h  NavigationTopic.cpp  NavigationTopic.h
src/003_Navigation/topics/: BlogTopic.cpp  BlogTopic.h  ComponentsTopic.cpp  ComponentsTopic.h  CvPortofolioTopic.cpp  CvPortofolioTopic.h  EditPostTopic.cpp  EditPostTopic.h  NewPostTopic.cpp  NewPostTopic.h  NotAuthorizedTopic.cpp  NotAuthorizedTopic.h  NotFoundTopic.cpp  NotFoundTopic.h  PostDetailTopic.cpp  UserSettingsTopic.cpp  UserSettingsTopic.h
src/003_WidgetDisplay/: WidgetDisplay.cpp  WidgetDisplay.h
src/004_TailwindTheme/: TailwindTheme.cpp  TailwindTheme.h  TailwindThemeBase.cpp  TailwindThemeBase.h
src/004_TailwindTheme/js/: CssThemeValidate.min.js
src/005_Dbo/: Session.cpp  Session.h
src/005_Dbo/Tables/: Comment.cpp  Comment.h  MessageTemplate.cpp  MessageTemplate.h  Permission.cpp  Post.cpp  Post.h  Tag.cpp  Tag.h  TemplateFile.cpp  TemplateFile.h  TemplateFolder.cpp  TemplateFolder.h  User.cpp  User.h
src/005_PersonalGalery/: DeferredWidget.h  GalleryTopic.cpp  GalleryTopic.h  PersonalGalery.cpp  PersonalGalery.h
src/005_PersonalGalery/topics/: ComponentsTopic.cpp  ComponentsTopic.h
src/006_Auth/: AuthWidget.cpp  AuthWidget.h  RegistrationView.cpp  RegistrationView.h  UserDetailsModel.cpp  UserDetailsModel.h
src/006_Auth/topics/: UserSettingsTopic.cpp  UserSettingsTopic.h
src/007_Blog/: BlogUtils.h  BlogView.cpp  BlogView.h  PostView.cpp  PostView.h
src/007_Blog/topics/: BlogTopic.cpp  BlogTopic.h  EditPostTopic.cpp  EditPostTopic.h  NewPostTopic.cpp  NewPostTopic.h  PostDetailTopic.cpp  PostDetailTopic.h
src/008_Stylus/: Stylus.cpp  Stylus.h  StylusSession.cpp  StylusSession.h  StylusState.cpp  StylusState.h
src/008_Stylus/Tables/: MessageTemplate.cpp  MessageTemplate.h  TemplateFile.cpp  TemplateFile.h  TemplateFolder.cpp  TemplateFolder.h
src/008_Stylus/TemplatesManager/: DboTempTreeView.cpp  DboTempTreeView.h  FileNode.cpp  FileNode.h  FolderNode.cpp  FolderNode.h  RootNode.cpp  RootNode.h  TempView.cpp  TempView.h  TemplateFoldersTreeView.cpp  TemplateFoldersTreeView.h  TemplateNode.cpp  TemplateNode.h  TemplatesManager.cpp  TemplatesManager.h
src/008_Stylus/TemplatesManager/PreviewWidgets/: TempView.cpp  TempView.h  XMLElemNode.cpp  XMLElemNode.h  XMLTreeNode.cpp  XMLTreeNode.h  XmlBrain.cpp  XmlBrain.h
src/008_Stylus/TemplatesManager/TablesTreeViewWidgets/: FileNode.cpp  FileNode.h  FolderNode.cpp  FolderNode.h  RootNode.cpp  RootNode.h  TemplateNode.cpp  TemplateNode.h
src/008_Stylus/Utils/: FilesManager.cpp  FilesManager.h  XmlBrain.cpp  XmlBrain.h
static/stylus/tailwind/: input.css  package.json
static/stylus/xml/001_Auth/: ovrwt-auth-login.xml
static/theme/tailwindcss/: tailwind.css  tailwind.minify.css
static/xml/: Utils.xml
static/xml/001_Auth/: ovrwt-auth-login.xml  ovrwt-auth-strings.xml  ovrwt-registration-view.xml
